--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "backbone": "^1.2.3",
     "underscore": "^1.8.3",
     "jquery": "^2.2.0",
-    "typeahead.js": "^0.11.1"
+    "typeahead.js": "^0.11.1",
+    "seiyria-bootstrap-slider": "^6.0.17"
   }
 }
