--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Flask==0.10.1
 Frozen-Flask==0.11
+GenericCache==1.0.2
 Jinja2==2.7.3
 Markdown==2.4.1
 MarkupSafe==0.23
@@ -13,6 +14,7 @@ clint==0.4.1
 csvkit==0.9.1
 dbf==0.94.003
 decorator==4.0.9
+geopy==1.11.0
 gnureadline==6.3.3
 google-api-python-client==1.3.1
 httplib2==0.9.2
