--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,8 @@
     "underscore": "^1.8.3",
     "jquery": "^2.2.0",
     "typeahead.js": "^0.11.1",
-    "seiyria-bootstrap-slider": "^6.0.17"
+    "seiyria-bootstrap-slider": "^6.0.17",
+    "chosen": "^1.5.1",
+    "jquery-serialize-object": "^2.5.0"
   }
 }
