--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 Flask==0.10.1
-Frozen-Flask==0.11
+Frozen-Flask==0.12
 GenericCache==1.0.2
 Jinja2==2.7.3
 Markdown==2.4.1
@@ -43,7 +43,7 @@ simplegeneric==0.8.1
 simplejson==3.8.1
 six==1.10.0
 slimit==0.8.1
-tarbell==1.0.4
+-e git+https://github.com/rnagle/tarbell.git@update-frozen-flask#egg=tarbell
 traitlets==4.1.0
 uritemplate==0.6
 wsgiref==0.1.2
