--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     "chosen": "^1.5.1",
     "jquery-serialize-object": "^2.5.0",
     "gsap": "^1.18.2",
-    "scrollmagic": "^2.0.5"
+    "scrollmagic": "^2.0.5",
+    "pym.js": "^0.4.5"
   }
 }
