--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.3.2",
   "devDependencies": {
     "grunt": "~0.4.5",
+    "grunt-concat-css": "^0.3.1",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-cssmin": "~0.11.0",
     "grunt-contrib-less": "~0.12.0",
+    "grunt-contrib-uglify": "~0.9.1",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-shell": ">=0.2.1",
-    "load-grunt-tasks": "~1.0.0",
-    "grunt-contrib-cssmin": "~0.11.0",
-    "grunt-contrib-uglify": "~0.9.1"
+    "load-grunt-tasks": "~1.0.0"
   }
 }
