--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "grunt": "~0.4.5",
     "grunt-concat-css": "^0.3.1",
     "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-cssmin": "~0.11.0",
+    "grunt-contrib-cssmin": "^1.0.1",
     "grunt-contrib-less": "~0.12.0",
     "grunt-contrib-uglify": "~0.9.1",
     "grunt-contrib-watch": "~0.6.1",
