--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "grunt-contrib-less": "~0.12.0",
     "grunt-contrib-uglify": "~0.9.1",
     "grunt-contrib-watch": "~0.6.1",
-    "grunt-shell": ">=0.2.1",
+    "grunt-shell": "^1.3.0",
     "load-grunt-tasks": "~1.0.0"
   }
 }
