--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ google-api-python-client==1.3.1
 httplib2==0.9.2
 ipython==4.1.1
 ipython-genutils==0.1.0
+ipdb==0.10.2
 itsdangerous==0.24
 jdcal==1.2
 jsonmodels==2.1.2
@@ -48,3 +49,4 @@ traitlets==4.1.0
 uritemplate==0.6
 wsgiref==0.1.2
 xlrd==0.9.3
+titlecase==0.10.0
